<?xml version="1.0"?>
<package format="2">
  <name>node_cpm_provided</name>
  <version>0.0.1</version>
  <description>The node_cpm_provided package</description>
  <maintainer email="chethan.lokesh.mariyaklla@ivi.fraunhofer.de">Chethan Lokesh Mariyaklla</maintainer>
  

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>etsi_its_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pdk_ros_msg</depend>
  
  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
